// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink should render with active link 1`] = `
<body>
  <div>
    <span
      class="text-blue-500 before:absolute before:left-0 before:bottom-0 before:h-[3px] before:w-full before:rounded-t-lg before:bg-blue-400 relative flex rounded-lg p-4 px-6 text-sm font-semibold hover:text-gray-900"
    >
      Label
    </span>
  </div>
</body>
`;

exports[`NavLink should render with inactive link 1`] = `
<body>
  <div>
    <span
      class="text-gray-500 relative flex rounded-lg p-4 px-6 text-sm font-semibold hover:text-gray-900"
    >
      Label
    </span>
  </div>
</body>
`;
